Fix for picture formatting on smaller browsers

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -15,10 +15,7 @@
 }
 
 .front {
-  min-width: 90%;
-  position: center;
-  margin: auto;
-  object-fit: scale-down;
+  width: 100%;
   height: 100%;
   backface-visibility: hidden;
   position: absolute;
@@ -27,11 +24,8 @@
 }
 
 .back {
-  min-width: 90%;
-  position: center;
-  margin: auto;
-  object-fit: scale-down;
-  height: 90%;
+  width: 100%;
+  height: 100%;
   backface-visibility: hidden;
   position: absolute;
   top: 0;
@@ -48,187 +42,137 @@
 }
 
 .cover {
-    background-image: linear-gradient(45deg,#00aeef 0%,#096fb9 100%);
-    overflow: hidden;
-    position: relative;
-  }
-  
-  .wrapper {
-    min-height: 100vh;
-    min-width: 100vw;
-    margin-top: 0;
-    position: relative;
-  }
-  
-  .main-section {
-    top: 150px;
-    width: 100%;
-    padding: 150px 0 0;
-  }
-  
-  .hero-section{
-    height: 530px;
-    width: 400px;
-    margin-bottom: 30px;
-    h2 {
-      color: white;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
+  background-image: linear-gradient(45deg,#00aeef 0%,#096fb9 100%);
+  overflow: hidden;
+  position: relative;
+}
 
-    .h2-charli{
-      margin:10px;
-      text-align:center;
-      font-weight:normal;
-      color:rgb(252, 252, 252)
-    }
-  
-    perspective: 1000px;
+.wrapper {
+  min-height: 100vh;
+  min-width: 100vw;
+  margin-top: 0;
+  position: relative;
+}
+
+.main-section {
+  top: 150px;
+  width: 100%;
+  padding: 150px 0 0;
+}
+
+.hero-section{
+  height: 530px;
+  width: 400px;
+
+  margin-bottom: 30px;
+  h2 {
     color: white;
-    width: 400px;
-    position: relative;
-  
-    &-content {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      padding: 20px;
-      z-index: 1;
-  
-      &-intro {
-        font-size: 17px;
-      }
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  perspective: 1000px;
+  color: white;
+  width: 400px;
+  position: relative;
+
+  &-content {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 20px;
+    z-index: 1;
+
+    &-intro {
+      font-size: 17px;
     }
   }
+}
 
-  .image {
-    min-width: 50%;
-    height: 100%;
-    margin: auto;
-    padding: 10px;
-    position: center;
-    text-align: center;
-    object-fit: scale-down;
-    background-repeat: no-repeat;
-    background-position: center;
+.image {
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.image-1 {
+  background-image: url('/images/section-1.png');
+}
+
+.image-2 {
+  background-image: url('/images/charliandben3.jpg');
+}
+
+
+.hero-welcome-text > h1 {
+  color: white;
+  text-transform: uppercase;
+  font-size: 27px;
+  margin-top: 80px;
+  font-weight: 300;
+}
+
+.hero-welcome-bio {
+  margin-top: 20px;
+  color: white;
+
+  .fa-stack {
+    font-size: 28px;
   }
 
-  .image-1 {
-    min-width: 50%;
-    height: 100%;
-    margin: auto;
-    padding: 10px;
-    position: center;
-    text-align: center;
-    object-fit: scale-down;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-image: url('/images/section-1.png');
+  .list-inline-item {
+    > a {
+      color: #373737;
+    }
   }
-  
-  .image-2 {
-    height: 100%;
-    min-width: 50%;
-    margin: auto;
-    padding: 10px;
-    position: center;
-    text-align: center;
-    object-fit: scale-down;
-    background-repeat: no-repeat;
-    background-position: center;
-    box-shadow: -17px 13px 41px rgba(13,78,158,0.6);
-    border: 2px solid #3bace5;
-    background-image: url('/images/charliandben4.jpg');
+}
+
+.hero-welcome-wrapper {
+  justify-content: flex-end;
+
+}
+
+@media (max-width: 850px) {
+  .hero-section {
+    margin-left: auto;
+    margin-right: auto;
   }
-  
+}
+
+
+@media (max-width: 991px) {
+  .hero-section {
+    width: 400px;
+  }
+
   .hero-welcome-text > h1 {
-    color: white;
-    text-transform: uppercase;
-    font-size: 27px;
-    margin-top: 80px;
-    font-weight: 300;
+    margin-top: 0px;
   }
-  
-  .hero-welcome-bio {
-    margin-top: 20px;
-    color: white;
-  
-    .fa-stack {
-      font-size: 28px;
-    }
-  
-    .list-inline-item {
-      > a {
-        color: #373737;
-      }
-    }
-  }
-  
-  .hero-welcome-wrapper {
-    justify-content: flex-end;
-    
-  }
+}
 
-  @media (max-width: 850px) {
-    .hero-section {
-      margin-left: auto;
-      margin-right: auto;
-    }
-  }
-  
-  @media (max-width: 991px) {
-    .hero-section {
-      width: 400px;
-    }
-  
-    .hero-welcome-text > h1 {
-      margin-top: 0px;
-    }
-  }
-  
-  .background-image {
-    position: absolute;
-    width: 1762px;
-    height: 493px;
-    object-fit: scale-down;
-  }
-  
-  .shadow-custom {
+.background-image {
+  position: absolute;
+  width: 1762px;
+  height: 493px;
+}
+
+.shadow-custom {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  box-shadow: -17px 13px 41px rgba(13,78,158,0.6);
+  border: 2px solid #3bace5;
+
+  .shadow-inner {
     width: 100%;
     height: 100%;
-    position: absolute;
-    top: 0;
-    box-shadow: -17px 13px 41px rgba(13,78,158,0.6);
-    border: 2px solid #3bace5;
-    object-fit: scale-down;
-  
-    .shadow-inner {
-      width: 100%;
-      height: 100%;
-      box-shadow: -17px 13px 13px rgba(0,0,0,0.09);
-      object-fit: scale-down;
-    }
+    box-shadow: -17px 13px 13px rgba(0,0,0,0.09);
   }
+}
 
-  .shadow-custom-charli {
-    width: 100%;
-    height: 100%;
-    top: 0;
-    position: absolute;
-    box-shadow: -17px 13px 41px rgba(13,78,158,0.6);
-    border: 40px solid #3bace5;
-    object-fit: scale-down;
-  
-    .shadow-inner {
-      width: 110%;
-      height: 100%;
-      box-shadow: -17px 13px 13px rgba(0,0,0,0.09);
-      object-fit: scale-down;
-    }
-  }
-  
-  .shadow-custom-purple {
-    border: 10px;
-    box-shadow: -17px 13px 41px rgba(13,78,158,0.3);
-    object-fit: scale-down;
-  }
+.shadow-custom-orange {
+  border: 2px solid #3262e6;
+  box-shadow: -17px 13px 41px rgba(13,78,158,0.3);
+}
